--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aniso8601==8.0.0
 boto==2.49.0
 click==7.1.1
 Flask==1.1.1
+flask-heroku==0.1.9
 Flask-JWT-Extended==3.24.1
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.1
