--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ flask-heroku==0.1.9
 Flask-JWT-Extended==3.24.1
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.1
+gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
