--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,19 @@
 aniso8601==8.0.0
-boto==2.49.0
+Boto==2.49.0
 click==7.1.1
+Dnspython==1.16.0
 Flask==1.1.1
 flask-heroku==0.1.9
 Flask-JWT-Extended==3.24.1
 Flask-RESTful==0.3.8
-Flask-SQLAlchemy==2.4.1
 gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
 passlib==1.7.2
-psycopg2-binary==2.8.4
 PyJWT==1.7.1
 pytz==2019.3
 six==1.14.0
-SQLAlchemy==1.3.15
 Werkzeug==1.0.1
 PyMongo==3.9.0
 
